2009-08-07  Tomas Cerha  <cerha@brailcom.org>

	* Makefile:
	* lib/pytis/presentation/_test.py:
	* lib/pytis/presentation/field.py:
	* lib/pytis/web/form.py:
	* resources/scripts/pytis.js:
	Added initial support for web form updates through AJAX..

2009-08-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/list.py:
	Fix drawing aggregation result labels..

2009-08-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/presentation/_test.py:
	Updated `display' test to reflect the previous change in display specification..

2009-08-03  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Added support for site icons..

2009-08-03  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Fixed "Unknown column ..." error message..

2009-07-31  Pavel Hanak  <hanak@wpb.cz>

	* lib/pytis/form/application.py:
	Added forgotten argument 'column' when calling 'permitted' check..

2009-07-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/list.py:
	Show MIN/MAX aggregation results also for date/time and string columns..

2009-07-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Handle unicode in string values of aggregation results..

2009-07-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Make the DBException error message for unknown column even less confusing and translate it to English..

2009-07-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Allow aggregation functions MIN and MAX also on string and date/time columns..

2009-07-30  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Fixes of connection dictionary key handling in PostgreSQLUserGroups.

2009-07-28  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbdata.py:
	* lib/pytis/form/application.py:
	Update config.dbconnection destructively after Login dialog.

2009-07-28  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py: